tests/ui/macros/ice-in-tokenstream-for-contracts-issue-140683.stderr
error: expected `{`, found `)`
  --> $DIR/ice-in-tokenstream-for-contracts-issue-140683.rs:8:18
   |
LL |     fn b() {(loop)}
   |              ----^ expected `{`
   |              |
   |              while parsing this `loop` expression

error: `ensures` attribute requires an argument, e.g., `#[ensures(|result: &T| condition)]`
  --> $DIR/ice-in-tokenstream-for-contracts-issue-140683.rs:7:5
   |
LL |     #[core::contracts::ensures]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

